@@ -1,6 +1,16 @@
+from Acquisition import aq_inner
+from ZODB.POSException import ConflictError
+
+from zope.component import getUtility
 from zope.interface import Interface, implements, alsoProvides
 
-from Products.Five.browser import BrowserView
+from plone.memoize.view import memoize
+from plone.portlets.interfaces import IPortletManager, \
+   IPortletAssignmentSettings
+from plone.portlets.constants import GROUP_CATEGORY
+from plone.portlets.manager import PortletManagerRenderer, logger
+from plone.portlets.utils import hashPortletInfo
+
 from Products.Five.browser.pagetemplatefile import ViewPageTemplateFile
 from Products.CMFCore.utils import getToolByName
 
@@ -13,6 +23,37 @@ class IHomePageView(Interface):
 
 class IAnonymousHomePageView(IHomePageView):
     """Marker interface for anonymous homepage version"""
+
+class HomePageColumnsRenderer(PortletManagerRenderer):
+
+    @memoize
+    def _lazyLoadPortlets(self, manager):
+        items = []
+        # below assignments attribute should be assigned by parent code
+        for p in self.filter(self.assignments):
+            renderer = self._dataToPortlet(p['assignment'].data)
+            info = p.copy()
+            info['manager'] = self.manager.__name__
+            info['renderer'] = renderer
+            hashPortletInfo(info)
+            # Record metadata on the renderer
+            renderer.__portlet_metadata__ = info.copy()
+            del renderer.__portlet_metadata__['renderer']
+            try:
+                isAvailable = renderer.available
+            except ConflictError:
+                raise
+            except Exception, e:
+                isAvailable = False
+                logger.exception(
+                    "Error while determining renderer availability of portlet "
+                    "(%r %r %r): %s" % (
+                    p['category'], p['key'], p['name'], str(e)))
+
+            info['available'] = isAvailable
+            items.append(info)
+
+        return items
 
 class HomePageView(DashboardView):
 
@@ -37,6 +78,30 @@ class HomePageView(DashboardView):
             return self._welcome_template()
         else:
             return self._dashboard_template()
+
+    def getColumn(self, name, group='AnonymousUsers'):
+        column = getUtility(IPortletManager, name=name)
+        category = column[GROUP_CATEGORY]
+        mapping = category.get(group, None)
+        if mapping is None:
+            return u''
+
+        context = aq_inner(self.context)
+        assignments = []
+        for assignment in mapping.values():
+            settings = IPortletAssignmentSettings(assignment)
+            if not settings.get('visible', True):
+                continue
+            assignments.append({'category': GROUP_CATEGORY,
+                                'key': group,
+                                'name': assignment.__name__,
+                                'assignment': assignment
+                                })
+
+        renderer = HomePageColumnsRenderer(context, self.request, self, column)
+        renderer.assignments = assignments
+        renderer.update()
+        return renderer.render()
 
     def is_anonymous(self):
         mt = getToolByName(self.context, 'portal_membership')
